# poibin

./: .pre-commit-config.yaml  setup.cfg
docs/source/: conf.py  index.rst
poibin/: __init__.py  poibin.py
tests/: test_poibin.py
