[metadata]
name = poibin
author = Mika J. Straka
description = Library for GWAS/QTL Power calculations
version = attr: poibin.__version__
url = https://github.com/tsakim/poibin
keywords =
  cool printing
  networking
classifiers =
  Development Status :: Beta
  Intended Audience :: Science/Research
  Programming Language :: Python :: 3
  Topic :: Scientific
license = MIT

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
install_requires =
   numpy
   scipy
   pytest
